Lombok Error handler adjusted to show all binding errors msgs in response Models divided to exposure and persistance Mapstruct mapping added